--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-wazo-router-calld (15.18~1) wazo-dev-buster; urgency=medium
+wazo-router-call_logd (15.18~1) wazo-dev-buster; urgency=medium
 
   * Initial package
 
